# cubes

./: .gitignore  CMakeLists.txt
include/: Camera.h  Cube.h  Entity.h  GLCommon.h  Game.h  GeometryData.h  GeometryLoader.h  Input.h  Light.h  Mesh.h  Renderer.h  Shader.h  Window.h  _Entity.h
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Cube.cpp  Entity.cpp  Game.cpp  Input.cpp  Light.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Window.cpp  _Entity.cpp  main.cpp
